<resources>

    <!--Files-->
    <string name="template_image_with_timestamp">%1$s-%2$s.jpg</string>
    <string name="photo_dir">profile_photos</string>
    <string name="wallpaper_dir">profile_wallpapers</string>
    <string name="camera_dir">camera</string>
    <string name="comics_dir">comics</string>

    <!--Date format-->
    <string name="date_format">dd MMMM yyyy</string>

    <!--Regex-->
    <string name="username_regex">^[a-zA-Z0-9_-]{4,16}$</string>

    <!--Login-->
    <string name="login_app_name">Bubble</string>
    <string name="login_email_field_default">Email...</string>
    <string name="login_password_field_default">Password...</string>
    <string name="login_confirm_password_field_default">Confirm password...</string>
    <string name="login_forgot_password"><u>Forgot password?</u></string>
    <string name="login_sign_up">Sign up</string>
    <string name="login_sign_in">Sign in</string>
    <string name="login_or_instead">or instead:</string>
    <string name="login_read_now">Read now</string>
    <string name="login_error_resetting_password">Error resetting password: %1$s</string>

    <!--Email-->
    <string name="message_auth_invalid_email_or_pwd">"Invalid email or password"</string>
    <string name="message_auth_weak_pwd">"Password should be at least 6 characters long"</string>
    <string name="message_auth_email_in_use">"This email address is already in use"</string>
    <string name="message_auth_user_does_not_exist">"User with such email does not exist"</string>

    <!--Forgot password-->
    <string name="message_forgot_password_success">Instructions have been sent to your email address. Please, check your
        inbox to reset the password
    </string>
    <string name="message_forgot_password_no_email">To reset your password, please specify the email</string>

    <!--Login input errors-->
    <string name="message_auth_fields_empty">Email and password fields must not be empty</string>
    <string name="message_auth_confirm_password">Please, confirm your password</string>
    <string name="message_auth_passwords_do_not_match">Entered passwords do not match</string>


    <!--Account setup-->
    <string name="setup_your_username">Your username</string>
    <string name="setup_joined_on">Joined on</string>
    <string name="setup_choose_username">Now, please, choose a username</string>
    <string name="setup_username_cannot_be_empty">Username field cannot be empty</string>
    <string name="setup_username_cannot_contain_spaces">Username cannot contain spaces</string>
    <string name="setup_username_too_short">Username must be at least 4 characters</string>
    <string name="setup_username_too_long">Username must be not longer than 16 characters</string>
    <string name="setup_username_invalid">Username contains restricted symbols</string>
    <string name="username_exists">Such username already exists</string>
    <string name="setup_title">Successfully signed up!</string>
    <string name="setup_get_started">Get started</string>
    <string name="setup_upload_photo">Upload photo using:</string>
    <string name="setup_upload_wallpaper">Upload wallpaper using:</string>
    <string name="setup_take_photo_camera">Camera</string>
    <string name="setup_from_gallery">Gallery</string>
    <string name="setup_menu_change_photo">Photo</string>
    <string name="setup_menu_change_wallpaper">Wallpaper</string>
    <string name="setup_continue_with_unchanged">Continue with default %1$s ?</string>
    <string name="setup_unchanged_photo_and_wallpaper">photo and wallpaper</string>
    <string name="setup_unchanged_photo">photo</string>
    <string name="setup_unchanged_wallpaper">wallpaper</string>

    <!--Database-->
    <string name="db_field_empty">This field is empty in the database</string>
    <string name="db_call_cancelled">Database call cancelled</string>
    <string name="db_no_connection">No connection</string>

    <!--Splash-->
    <string name="splash_get">Get</string>
    <string name="splash_set">Set</string>
    <string name="splash_version">Version</string>

    <!--Profile-->
    <!--Channels-->
    <string name="profile_channels">Channels</string>

    <!--Favorites-->
    <string name="profile_favorites">Favorites</string>
    <string name="profile_favorites_empty_message">Comics marked as favorite will be displayed here</string>

    <!--Uploads-->
    <string name="profile_uploads">My uploads</string>
    <string name="profile_upload_comic">Upload comic</string>
    <string name="user_uploads_empty">This user has not uploaded any comics</string>

    <!--Common messages-->
    <string name="common_ok">OK</string>
    <string name="common_none">None</string>
    <string name="common_yes">Yes</string>
    <string name="common_no">No</string>
    <string name="common_loading">Loading</string>
    <string name="common_no_internet">Network error occurred. Please, check your connection</string>
    <string name="common_error_message">Oops, something went wrong</string>
    <string name="common_empty">Nothing here yet</string>

    <!--Common-->
    <string name="common_title">Common</string>
    <string name="common_empty_message">No comics have been uploaded yet</string>

    <!--Subscriptions-->
    <string name="subscriptions_title">Subscriptions</string>
    <string name="subscriptions_empty_message">You have not subscribed to any channel yet</string>
    <string name="channels_empty_message">No channels here yet</string>

    <!--Profile-->
    <string name="profile_title">Profile</string>
    <string name="profile_log_out_alert">Are you sure you want to log out?</string>

    <!--Upload screen-->
    <string name="upload_screen_upload_comic">Upload comic</string>
    <string name="upload_screen_empty_fields">All fields must be filled in</string>

    <!--Comic screen-->
    <string name="comic_screem_read_comic">Read comic</string>
    <string name="comic_screen_download_comic">Download Comic?</string>

    <!--User screen-->
    <string name="user_channels">Channels</string>
    <string name="user_uploads">Uploads</string>

</resources>
